fixed results video on mobile

--- a/assets/css/src/basics/utilities.scss
+++ b/assets/css/src/basics/utilities.scss
@@ -15,7 +15,15 @@ iframe{
   .resultsVideo &{
     display: block;
     width:100%;
-    height:400px;
+    margin-bottom:14px;
+  }
+
+  @media only screen and (min-width:768px){
+    
+    .resultsVideo &{
+      height:400px;
+      
+    }
   }
 }
 
